--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<lombok-maven-plugin.version>1.18.12.0</lombok-maven-plugin.version>
+		<gson.version>2.8.9</gson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -36,8 +38,14 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok-maven-plugin</artifactId>
-			<version>1.18.12.0</version>
+			<version>${lombok-maven-plugin.version}</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
 		</dependency>
 
 		<dependency>
