added joke rewriting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-
+# zmiana portu ze standardowego 8080
 server.port=9090
+# Logging in tra
 logging.level.pl.sda=trace
 spring.output.ansi.enabled=ALWAYS
+spring.profiles.active=mocked-db
