--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=9090
 logging.level.pl.sda=trace
 spring.output.ansi.enabled=ALWAYS
 spring.profiles.active=mocked-db
+the.best.group.in.sda=ldz31
