--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>11</java.version>
 		<lombok-maven-plugin.version>1.18.12.0</lombok-maven-plugin.version>
 		<gson.version>2.8.9</gson.version>
+		<spring-boot-starter-aop.version>2.6.2</spring-boot-starter-aop.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +47,13 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>${spring-boot-starter-aop.version}</version>
 		</dependency>
 
 		<dependency>
