--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # zmiana portu ze standardowego 8080
 server.port=9090
-# Logging in tra
+# Logging in trace for "our" package (pl.sda)
 logging.level.pl.sda=trace
+# If your terminal supports ANSI, color output is used to aid readability
 spring.output.ansi.enabled=ALWAYS
+# Adding profile to turn on mocked DB
 spring.profiles.active=mocked-db
+# Custom configuration
 the.best.group.in.sda=ldz31
+joke.get.interval=* * * * * *
