--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.profiles.active=mocked-db
 # Custom configuration
 the.best.group.in.sda=ldz31
 joke.get.interval=* * * * * *
+# Turn on trust for all packages to be serialized/deserialized
+spring.activemq.packages.trust-all=true
