--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
 			<artifactId>spring-boot-starter-activemq</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
