--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.profiles.active=mocked-db
 the.best.group.in.sda=ldz31
 joke.get.interval=* * * * * *
 # Turn on trust for all packages to be serialized/deserialized
-spring.activemq.packages.trust-all=true
+#spring.datasource.url=jdbc:h2:file:/tmp/test
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
